# savannah

./: .env.sample  .envrc  .gitignore  CLAUDE.md  DANS_ULTIMATE_CLAUDE_RALPH_BEADS_SETUP.md  IMPLEMENTATION_GUIDE.md  LICENSE  pyproject.toml
.beads/: config.yaml  issues.jsonl
.claude/: settings.json
.claude/agents/: savannah-agent.md  sim-analyzer.md  sim-compactor.md
.github/workflows/: test.yml
documentation/: README.md  anti-contamination.md  architecture.md  configuration.md  experimental-design.md  getting-started.md  hypothesis.md  live-visualization.md  llm-providers.md  metrics.md  phases.md  project-overview.md  ralph-workflow.md
documentation/concepts/: agent-prompts.md  integrity-layer.md  memory-architecture.md  perturbation.md  session-modes.md
documentation/further-reading/: prior-art.md  related-work.md  theory.md
savannah/: __init__.py  requirements.txt  run.py
savannah/analysis/: __main__.py  analyze.py  audit.py  biography.py  plots.py
savannah/config/: default.yaml
savannah/config/experiments/: baseline.yaml  full_pressure.yaml  perturbation.yaml  resumable_pressure.yaml  social.yaml  team_baseline.yaml  team_resumable.yaml
savannah/src/: __init__.py  agent.py  engine.py  inspect_cmd.py  live_server.py  llm.py  memory.py  metrics.py  mock_llm.py  names.py  parser.py  perturbation.py  replay.py  team_coordinator.md  tick_helpers.py  world.py
savannah/tests/: conftest.py  test_agent.py  test_analysis.py  test_config.py  test_engine.py  test_inspect.py  test_integration.py  test_llm.py  test_memory.py  test_metrics.py  test_names.py  test_parser.py  test_perturbation.py  test_replay.py  test_tick_helpers.py  test_world.py
savannah/viz/: app.js  index.html  live.html  style.css
scripts/: extract_followups.sh
scripts/hooks/: post-task.sh  pre-task.sh
scripts/ralph/: CLAUDE.md  progress.txt  ralph-beads.sh
