[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "savannah"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
analysis = ["pandas>=2.0", "scipy>=1.11", "matplotlib>=3.8"]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
savannah = "savannah.run:main"

[tool.setuptools.packages.find]
include = ["savannah*"]
