[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "savannah"
version = "0.1.0"
description = "AI Savannah — Integrity Layer Emergence Testbed: LLM agent survival simulation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Daniel Barrett" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
api = ["anthropic>=0.40"]
litellm = ["litellm>=1.50"]
analysis = ["pandas>=2.0", "scipy>=1.11", "matplotlib>=3.8"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
all = [
    "savannah[api,litellm,analysis,dev]",
]

[project.scripts]
savannah = "savannah.run:main"

[project.urls]
Repository = "https://github.com/thoughtpunch/savannah"

[tool.setuptools.packages.find]
include = ["savannah*"]

[tool.setuptools.package-data]
savannah = ["py.typed", "config/*.yaml", "config/**/*.yaml", "viz/*.html"]

# ── Ruff ─────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (sometimes less readable)
    "UP007",  # use X | Y for union types (already using from __future__)
    "RUF012", # mutable class variables (dataclass fields are fine)
]

[tool.ruff.lint.isort]
known-first-party = ["savannah"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest ───────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["savannah/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
